# sg-dividend-data

./: .gitignore  README.md  pyproject.toml  universe.json
.github/workflows/: refresh.yml
sg_dividend_data/: alerts.py  enrichment.py  models.py  refresh.py  scoring.py  universe.py  uploader.py  writer.py
sg_dividend_data/sources/: dividend_history.py  sginvestors.py  sgx.py  sgx_master.py  yahoo.py
tests/: test_alerts.py  test_enrichment.py  test_models.py  test_refresh.py  test_scoring.py  test_sginvestors.py  test_sgx.py  test_sgx_master.py  test_universe.py  test_uploader.py  test_writer.py  test_yahoo.py
tests/fixtures/: sginvestors_d05.html  sgx_corp_actions.json  yahoo_d05.html
