[project]
name = "sg-dividend-data"
version = "0.1.0"
description = "ETL for SGX dividend universe JSON"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "yfinance>=0.2.50",
    "pandas>=2.0",
    "pydantic>=2.0",
    "boto3>=1.34",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
sg-dividend-refresh = "sg_dividend_data.refresh:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
